JANコードから商品詳細を取得するエンドポイントを実装
